# 42piscine-c07

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile
tests/: CMakeLists.txt  test_ft_range.c  test_ft_strdup.c  test_ft_strjoin.c  test_ft_ultimate_range.c  test_main.c  tests.h
